<resources>
    <string name="app_name">Book Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_ph_no">Supplier Ph. No.</string>
    <string name="save">save</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="action_delete">Delete</string>
    <string name="catalog_delete_book_failed">Data Not Deleted Successfully</string>
    <string name="catalog_delete_book_successful">All The Data Deleted Successfully</string>
    <string name="delete_dialog_msg">Do You Really Want To Delete The Complete Data ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="your_inventory_is_empty">Your Inventory is Empty</string>
    <string name="let_s_add_some_more_books">Let\'s Add Some More Books !!</string>
    <string name="add_a_book">Add a Book</string>
    <string name="edit_the_book">Edit the Book</string>
    <string name="editor_insert_book_failed">No Book Was Inserted</string>
    <string name="editor_insert_book_successful">The Book Was Successfully Inserted</string>
    <string name="editor_update_book_failed">Book was not updated successfully</string>
    <string name="editor_update_book_successful">Successfully Updated The Book</string>
    <string name="unsaved_changes_dialog_msg">Do you Really Want To Exit?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_failed">Book Was Not Deleted</string>
    <string name="editor_delete_book_successful">Successfully Deleted The Book</string>
    <string name="delete_dialog_msg_single">Do you Really Want To Delete The Book?</string>
    <string name="no_book_to_sale">No Book To Sell</string>
    <string name="book_name">Book Name :</string>
    <string name="require_all_details">Please Provide All The Details For The Product To Save</string>
    <string name="name_require">Name FIeld Is Required</string>
    <string name="price_required">Price Field Is Required</string>
    <string name="quantity_required">Quantity Field Is Required</string>
    <string name="supplier_name_required">Supplier Name  Filed Is Required</string>
    <string name="supplier_ph_no_required">Supplier Phone Number Filed Is Required</string>
    <string name="book_spannable">Book Name :</string>
</resources>
