<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookEditor">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/thirty_two_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:text="@string/product_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toStartOf="@+id/product_name"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product Name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/twnety_eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Price" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:text="@string/supplier_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_name"
        app:layout_constraintEnd_toStartOf="@+id/supplier_name"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twelve_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:ems="10"
        android:hint="@string/supplier_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:text="@string/supplier_ph_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_ph_number"
        app:layout_constraintEnd_toStartOf="@+id/supplier_ph_number"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/supplier_ph_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginBottom="@dimen/one_three_two"
        android:ems="10"
        android:hint="Supplier Phone Number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name"
        app:layout_constraintVertical_bias="0.122" />
</android.support.constraint.ConstraintLayout>